--- a/i18n/zh-CN.toml
+++ b/i18n/zh-CN.toml
@@ -48,6 +48,16 @@ other = "切换主题"
 # === partials/footer.html ===
 [poweredBySome]
 other = "由 {{ .Hugo }} 强力驱动 | 主题 - {{ .Theme }}"
+
+[siteUV]
+other = "本站总访客数 %s 人"
+
+[sitePV]
+other = "本站总访问量 %s 次"
+
+[pagePV]
+other = "%s 次阅读"
+
 # === partials/footer.html ===
 
 # === partials/comment.html ===
