--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -46,7 +46,8 @@ other = "Switch Theme"
 
 # === partials/footer.html ===
 [poweredBySome]
-other = "Powered by {{ .Hugo }} | Theme - {{ .Theme }}"
+#other = "Powered by {{ .Hugo }} | Theme - {{ .Theme }}"
+other = "{{ .Hugo }} - {{ .Theme }}"
 
 [siteUV]
 other = "Site UV: %s"
