--- a/i18n/zh-CN.toml
+++ b/i18n/zh-CN.toml
@@ -47,7 +47,8 @@ other = "切换主题"
 
 # === partials/footer.html ===
 [poweredBySome]
-other = "由 {{ .Hugo }} 强力驱动 | 主题 - {{ .Theme }}"
+#other = "由 {{ .Hugo }} 强力驱动 | 主题 - {{ .Theme }}"
+other = "{{ .Hugo }} - {{ .Theme }}"
 
 [siteUV]
 other = "本站总访客数 %s 人"
